metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Central_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>Central_ListPrice__c</fullName>
    <label>List price from Central</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>