metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Central_Maint_Total_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Central_Maint_Total_Line_Value__c</fullName>
    <label>Maint Total Value from Central</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>