metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Central_OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>Central_OpportunityID__c</fullName>
    <description>Opportunity ID from Central Salesforce</description>
    <externalId>true</externalId>
    <label>Old Opportunity ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>