metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Central_Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Central_Product2Id__c</fullName>
    <description>Product ID from Central Salesforce</description>
    <externalId>true</externalId>
    <label>Old Product ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>