metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Central_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>Central_ProductCode__c</fullName>
    <description>Code of the product in the source system (e.g. NetSuite, Central SF). Must be provided for the legacy product item.</description>
    <inlineHelpText>Code of the product in the source system (e.g. NetSuite, Central SF). Must be provided for the legacy product item.</inlineHelpText>
    <label>Source Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>