metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Central_ProductName__c.field-meta.xml
<CustomField>
    <fullName>Central_ProductName__c</fullName>
    <description>Name of the product in the source system (e.g. NetSuite, Central SF). Must be provided for the legacy product item.</description>
    <inlineHelpText>Name of the product in the source system (e.g. NetSuite, Central SF). Must be provided for the legacy product item.</inlineHelpText>
    <label>Source Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>