metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/First_Year_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Line_Value__c</fullName>
    <formula>IF (Subscription_Term__c &lt;= 12, Quantity * UnitPrice, Quantity * ( UnitPrice / Subscription_Term__c) * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>