metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/gs_ns_lineid__c.field-meta.xml
<CustomField>
    <fullName>gs_ns_lineid__c</fullName>
    <externalId>true</externalId>
    <label>NS Line Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>