metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>Custom line description field to match NS limit as standard SF field limit is much too low.</description>
    <label>Line Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>