metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/List_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Total__c</fullName>
    <description>List Total price. Gets the value automatically from the quote line.</description>
    <label>List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>