metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Migrated_IgniteTech_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Migrated_IgniteTech_SF_ID__c</fullName>
    <description>ID of this opp line in IgniteTech SFDC. Admin reference only.</description>
    <externalId>true</externalId>
    <label>Migrated IgniteTech SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>