metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <description>The term of the subscription in months. Used in MRR calculation.</description>
    <label>Subscription Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>