metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/fields/Success_Level__c.field-meta.xml
<CustomField>
    <fullName>Success_Level__c</fullName>
    <description>LAMBDA-69849 field to derive success level from related Product</description>
    <formula>TEXT(PricebookEntry.Product2.Success_Level__c)</formula>
    <inlineHelpText>Success level of the related product fetched from the Product record</inlineHelpText>
    <label>Success Level</label>
    <type>Text</type>
</CustomField>