metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/validationRules/ValidateQuantityOverProductQuantities.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateQuantityOverProductQuantities</fullName>
    <active>false</active>
    <errorConditionFormula>(NOT(ISPICKVAL(Product2.Family,&apos;FogBugz&apos;)) &amp;&amp; NOT(ISPICKVAL(Product2.Family,&apos;Kayako&apos;)) &amp;&amp; Quantity &lt; Product2.Min_Quantity__c)
|| 
(NOT(ISPICKVAL(Product2.Family,&apos;FogBugz&apos;)) &amp;&amp; NOT(ISPICKVAL(Product2.Family,&apos;Kayako&apos;)) &amp;&amp; Product2.Max_Quantity__c != null &amp;&amp; Quantity &gt; Product2.Max_Quantity__c)</errorConditionFormula>
    <errorDisplayField>ServiceDate</errorDisplayField>
    <errorMessage>Quantity cannot be less than the minimum product quantity or greater than maximum product quantity.</errorMessage>
</ValidationRule>