metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/validationRules/ValidateTermField.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateTermField</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Product2.00N2x000006TLXu, &quot;One Time&quot;)), ISPICKVAL(Term__c,&quot;&quot;))</errorConditionFormula>
    <errorMessage>Please enter term value for subscription</errorMessage>
</ValidationRule>