metadata/sf-prod/force-app/main/default/objects/OpportunityLineItem/validationRules/ValidateTermFieldIsInSubscriptionTerms.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateTermFieldIsInSubscriptionTerms</fullName>
    <active>false</active>
    <description>Multi-select picklist does not support dynamic value comparison that&apos;s why implemented by hardcoding possible term values</description>
    <errorConditionFormula>CASE(Term__c,
&quot;1&quot;,IF(INCLUDES(Product2.Subscription_Terms__c,&quot;1&quot;),0,1),
&quot;12&quot;,IF(INCLUDES(Product2.Subscription_Terms__c,&quot;12&quot;),0,1),
&quot;24&quot;,IF(INCLUDES(Product2.Subscription_Terms__c,&quot;24&quot;),0,1),
&quot;36&quot;,IF(INCLUDES(Product2.Subscription_Terms__c,&quot;36&quot;),0,1),
&quot;48&quot;,IF(INCLUDES(Product2.Subscription_Terms__c,&quot;48&quot;),0,1),
&quot;60&quot;,IF(INCLUDES(Product2.Subscription_Terms__c,&quot;60&quot;),0,1),
(IF(ISPICKVAL(Product2.00N2x000006TLXu, &quot;One Time&quot;),0,1))
) = 1</errorConditionFormula>
    <errorMessage>Selected Term is not supported on this product.</errorMessage>
</ValidationRule>